# erpl

./: .cursorignore  .gitignore  .gitmodules  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  Makefile  README.md  compile_commands.json  extension_config.cmake  pixi.toml  pyproject.toml
.beads/: issues.jsonl
.cursor/rules/: duckdb_extension.mdc  duckdb_secrets.mdc
.github/config/: distribution_matrix.json
.github/docker/: README.md
.github/workflows/: MainDistributionPipeline.yml  _extension_build.yml  _extension_deploy.yml  _extension_distribution.yml
examples/: WEATHER.csv  actual_nw_demo_python.ipynb  epm_odp_demo_python.ipynb  exp_01_deserialize_type.ipynb  flight_demo_node.ipynb  flight_demo_python.ipynb  flight_demo_r.ipynb  rfc_01_load_extension.ipynb  rfc_02_read_table.ipynb  walkthrough.md
impl/: CMakeLists.txt  Makefile
impl/src/: duckdb_serialization_helper.cpp  erpl_impl_extension.cpp  pragma_ping.cpp  pragma_set_trace.cpp  sap_connection.cpp  sap_function.cpp  sap_type_conversion.cpp  scanner_describe_fields.cpp  scanner_describe_function.cpp  scanner_invoke.cpp  scanner_show_tables.cpp
impl/test/cpp/: CMakeLists.txt  test_telemetry.cpp
rfc/: CMakeLists.txt  Makefile  vcpkg.json
rfc/src/: duckdb_argument_helper.cpp  duckdb_serialization_helper.cpp  erpl_rfc_extension.cpp  erpl_tracing.cpp  pragma_ini.cpp  pragma_ping.cpp  pragma_set_trace.cpp  sap_connection.cpp  sap_function.cpp  sap_rfc.cpp  sap_secret.cpp  sap_storage.cpp  sap_table_entry.cpp  sap_type_conversion.cpp  scanner_describe_fields.cpp  scanner_describe_function.cpp  scanner_describe_references.cpp  scanner_invoke.cpp  scanner_read_table.cpp  scanner_rfc_authorizations.cpp  scanner_show_functions.cpp  scanner_show_groups.cpp  scanner_show_tables.cpp  telemetry.cpp
rfc/src/include/: duckdb_argument_helper.hpp  duckdb_serialization_helper.hpp  erpl_rfc_extension.hpp  erpl_tracing.hpp  pragma_ini.hpp  pragma_ping.hpp  pragma_set_trace.hpp  sap_connection.hpp  sap_function.hpp  sap_rfc.hpp  sap_secret.hpp  sap_storage.hpp  sap_table_entry.hpp  sap_type_conversion.hpp  scanner_describe_fields.hpp  scanner_describe_function.hpp  scanner_describe_references.hpp  scanner_invoke.hpp  scanner_read_table.hpp  scanner_rfc_authorizations.hpp  scanner_show_functions.hpp  scanner_show_groups.hpp  scanner_show_tables.hpp  telemetry.hpp
rfc/test/cpp/: CMakeLists.txt  test_connection_close.cpp  test_main.cpp  test_read_table_batching.cpp  test_select_supported_args.cpp  test_serialization_helper.cpp  test_table_wrapper.cpp  test_telemetry.cpp  test_type_conversion.cpp  test_value_helper.cpp
rfc/test/disabled/: sap_rfc_invoke.test
rfc/test/parallel/: README.md  conftest.py  fuzz_invoke.py  oracles.py  perf_sweep.py  probe.py  run_baseline.py  test_alignment.py  test_breadth.py  test_global_scheduler.py  test_perf_ddic.py
rfc/test/sql/: sap_describe_fields.test  sap_read_table.test  sap_rfc_attach.test  sap_rfc_attach_limit.test  sap_rfc_authorizations.test  sap_rfc_catalog_functions.test  sap_rfc_describe_function.test  sap_rfc_invoke.test  sap_rfc_invoke_decimal.test  sap_rfc_invoke_flight.test  sap_rfc_invoke_fuzz.test  sap_rfc_invoke_stfc.test  sap_rfc_ping.test  sap_rfc_search_function.test  sap_rfc_search_group.test  sap_rfc_secret.test  sap_rfc_show_function.test  sap_rfc_show_groups.test  sap_rfc_show_tables.test  sap_rfc_type_coverage.test  sap_rfc_type_fallback.test  sap_show_tables.test
scripts/: A4H_D00_vhcala4hci.profile  download_and_extract_nwrfc.ps1  download_and_extract_nwrfc.sh  extension-upload.sh  functions.cmake  lsan_suppress.txt  smoke-test-musl.sh  smoke-test.linux.sh  smoke-test.ps1  smoke-test.sh  start-duckdb-debug.sh  start-gui.sh  start-sap.sh
scripts/vscode-settings/: cmake-tools-kits-msys2.json  settings-msys2.json
src/: duckdb_argument_helper.cpp  duckdb_json_helper.cpp  duckdb_serialization_helper.cpp  erpel_extension.cpp  erpl_extension.cpp  pragma_ini.cpp  pragma_ping.cpp  pragma_set_trace.cpp  sap_connection.cpp  sap_function.cpp  sap_rfc.cpp  sap_type_conversion.cpp  scanner_describe_fields.cpp  scanner_describe_function.cpp  scanner_describe_references.cpp  scanner_invoke.cpp  scanner_read_table.cpp  scanner_search_function.cpp  scanner_search_group.cpp  scanner_show_tables.cpp  telemetry.cpp
src/bics/: CMakeLists.txt  bics.cpp  scanner_describe_infoprovider.cpp  scanner_search_infoprovider.cpp
src/bics/doc/: Readme.md
src/include/: duckdb_argument_helper.hpp  duckdb_json_helper.hpp  duckdb_serialization_helper.hpp  erpel_extension.hpp  erpl_extension.hpp  pragma_ping.hpp  sap_connection.hpp  sap_function.hpp  sap_rfc.hpp  sap_type_conversion.hpp  scanner_describe_references.hpp  scanner_search_group.hpp  telemetry.hpp
src/odp/: CMakeLists.txt
test/: README.md
test/cpp/: CMakeLists.txt  test_bics_model.cpp  test_json_helper.cpp  test_serialization_helper.cpp
trampoline/: CMakeLists.txt  Makefile
trampoline/src/: erpl_extension.cpp  erpl_trampoline_extension.cpp
trampoline/src/include/: erpl_extension.hpp  erpl_trampoline_extension.hpp
trampoline/test/python/: test_double_load.py
tunnel/: CMakeLists.txt
tunnel/src/: pragma_tunnel_close.cpp  pragma_tunnel_close_all.cpp  pragma_tunnel_create.cpp  scanner_tunnels.cpp  ssh_tunnel_client.cpp  telemetry.cpp  tunnel_connection.cpp  tunnel_extension.cpp  tunnel_manager.cpp  tunnel_secret.cpp
tunnel/src/include/: erpl_tunnel_extension.hpp  pragma_tunnel_close.hpp  pragma_tunnel_close_all.hpp  pragma_tunnel_create.hpp  scanner_tunnels.hpp  telemetry.hpp  tunnel_connection.hpp  tunnel_functions.hpp  tunnel_manager.hpp  tunnel_secret.hpp
tunnel/test/: CMakeLists.txt
tunnel/test/integration/: .gitignore  README.md  ci.yml  docker-compose.yml  http_server.py  setup_ssh.sh  sshd_config  test_integration.sh  test_key_static  test_key_static.pub  test_key_static_passphrase  test_key_static_passphrase.pub  test_setup.sh
tunnel/test/sql/: sap_tunnel_basic.test  sap_tunnel_integration.test  sap_tunnel_integration_key.test  sap_tunnel_integration_password.test
(+188 files in other folders)
